--- a/package.json
+++ b/package.json
@@ -11,13 +11,21 @@
     "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
-    "next": "15.3.3",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "@apollo/client": "^3.13.8",
+    "@apollo/datasource-rest": "^6.4.1",
+    "@apollo/server": "^4.12.1",
+    "@as-integrations/next": "^3.2.0",
+    "cross-fetch": "^4.1.0",
+    "graphql": "^16.11.0",
+    "graphql-tag": "^2.12.6",
+    "next": "12.3.4",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^15.3.3",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@types/graphql": "^14.5.0",
     "@types/node": "22.15.29",
     "@types/react": "19.1.6",
     "@types/react-dom": "19.1.5",
