--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^15.3.3",
+    "@svgr/webpack": "^8.1.0",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/graphql": "^14.5.0",
     "@types/node": "22.15.29",
